--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,15 @@ version = "0.1.0"
 authors = ["Robin Appelman <robin@icewind.nl>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+demostf-client = { version = "0.1.2", default-features = false, features = ["rustls-tls"], path = "../api-client" }
+sqlx = { version = "0.4", features = ["postgres", "runtime-tokio-rustls"] }
+dotenv = "0.15.0"
+color-eyre = "0.5.8"
+colored = "2"
+tokio = { version = "0.2", features = ["macros", "rt-core"] }
+tf-demo-parser = { version = "0.1", path = "../tf-demo-parser" }
+bitbuffer = "0.7.1"
+
+[profile.dev.package.tf-demo-parser]
+opt-level = 3
