--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["Robin Appelman <robin@icewind.nl>"]
 edition = "2018"
 
 [dependencies]
-demostf-client = { version = "0.1.2", default-features = false, features = ["rustls-tls"], path = "../api-client" }
+demostf-client = { version = "0.1.2", default-features = false, features = ["rustls-tls"] }
 sqlx = { version = "0.4", features = ["postgres", "runtime-tokio-rustls"] }
 dotenv = "0.15.0"
 color-eyre = "0.5.8"
 colored = "2"
 tokio = { version = "0.2", features = ["macros", "rt-core"] }
-tf-demo-parser = { version = "0.1", path = "../tf-demo-parser" }
+tf-demo-parser = "0.1"
 bitbuffer = "0.7.1"
 
 [profile.dev.package.tf-demo-parser]
