--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -69,6 +69,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: musl-tools
+        run: |
+          sudo apt-get install musl-tools
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
