bumb dependencies + docker ci

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,14 @@ authors = ["Robin Appelman <robin@icewind.nl>"]
 edition = "2018"
 
 [dependencies]
-demostf-client = { version = "0.1.5", default-features = false, features = ["rustls-tls"] }
-sqlx = { version = "0.4", features = ["postgres", "runtime-tokio-rustls"] }
-dotenv = "0.15.0"
-color-eyre = "0.5.8"
+demostf-client = { version = "0.2", default-features = false, features = ["rustls-tls"] }
+sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
+dotenv = "0.15"
+color-eyre = "0.5"
 colored = "2"
-tokio = { version = "0.2", features = ["macros", "rt-core"] }
-tf-demo-parser = "0.2"
-bitbuffer = "0.8"
+tokio = { version = "1", features = ["macros"] }
+tf-demo-parser = "0.3"
+bitbuffer = "0.10"
 
 [profile.dev.package.tf-demo-parser]
 opt-level = 3
